--- a/testinfo.html
+++ b/testinfo.html
@@ -1,9 +1,27 @@
 <html>
     <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
      <title>夜二技資一甲</title>
-    </head>>
+     <bgsound src="music.mid" loop="1">
+    </head>
+     <frameset cols=120,*>
+         <frame src="left.htm">
+         <frame src="right.htm">
+     </frameset>
+     <frameset rows='50%'>
+          <frame src="left.htm">
+         <frame src="right.htm">
+     </frameset>
     <body>
-        
+        <table border=1>
+            <caption>公佈欄</caption>
+<td>測試文件</td>
+<td>儲存格2</td>
+<tr>
+<td>儲存格3</td>
+<td>儲存格4</td>
+</table>
+
     </body>
 </html>
 
