--- a/testinfo.html
+++ b/testinfo.html
@@ -3,13 +3,12 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
      <title>夜二技資一甲</title>
     </head>
-     <frameset cols=120,*>
+     <frameset rows=450,850>
          <frame src="left.htm">
          <frame src="right.htm">
-     </frameset>
-     <frameset rows='50%'>
-          <frame src="left.htm">
-         <frame src="right.htm">
+    <frameset cols=250,340>
+                 <frame src="left.htm">
+                 <frame src="right.htm">
      </frameset>
     <body>
         <table border=1>
