--- a/testinfonew.html
+++ b/testinfonew.html
@@ -7,6 +7,14 @@
 </head>
 <body>
 <ch3>測式文件</ch3>
+<tabel>
+<p> <caption>公佈欄</caption></p>
+<P><td>測試文件</td></p>
+<td>儲存格2</td>
+<tr>
+<td>儲存格3</td>
+<td>儲存格4</td>
+</tabel>
 </body>
 </html>
 
