--- a/testinfo.html
+++ b/testinfo.html
@@ -1,17 +1,15 @@
+<!DOCTYPE html>
 <html>
-    <head lang="en">
-        <meta charset="UTF-8">
-        <title>夜二技資一甲測試</title>
-        <link rel="stylesheet" href="style/main.css"/>
-    </head>
-    <body> 
-    <div>
-      <h2> this is test vedio </h2>
-    </div>
-      
-    <div class="div_table-cell"><span></span>
-            <iframe width="315" height="315" src="https://www.youtube.com/embed/oj6gYbvbc-0" frameborder="0" allowfullscreen></iframe>
-            </div>
-           
-    </body>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <link rel="stylesheet" href="style/main.css" type="text/css" />    
+    <title>夜二技資一甲測試</title>
+    <div id="float-center"></div>
+   <style>div{float:left}</style>
+</head>
+<body>
+<div class="center-blocked">第一個區塊</div>
+<div class="center-block">第二個區塊</div>
+<div class="center-blocke">這裡是文字</div>
+</body>
 </html>
