--- a/webtest.html
+++ b/webtest.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
-<html lang="zh_TW">
+<html lanng="en">
 <head>
+<mate name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.8, maximum-scale=2.0, user-scalable=no"></mate>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="stylesheet" href="bootstrap.css" type="text/css" />
-<style type="text/css">
-    div{float:left;margin:2.5px;}
-</style>
+<link rel="stylesheet" href="style/main.css" type="text/css" />
 <title>夜二技資一甲測試</title>
 </head>
 <body>
-  <div title="test">
-    <div>
-      <iframe frameborder="0" width="480" height="270" src="//www.dailymotion.com/embed/video/x39k6o4" allowfullscreen></iframe><br /><a href="http://www.dailymotion.com/video/x39k6o4_%E7%9C%8B%E8%A6%8B%E9%AC%BC%E7%9A%84%E5%88%91%E8%AD%A6%E8%99%95%E5%AE%B92-09-1_tv" target="_blank">看見鬼的刑警處容2_09 -1</a> <i>by <a href="http://www.dailymotion.com/qa9070" target="_blank">qa9070</a></i>
-    </div>
-    <div>
-      <iframe frameborder="0" width="480" height="270" src="//www.dailymotion.com/embed/video/x39k6o3" allowfullscreen></iframe><br /><a href="http://www.dailymotion.com/video/x39k6o3_%E7%9C%8B%E8%A6%8B%E9%AC%BC%E7%9A%84%E5%88%91%E8%AD%A6%E8%99%95%E5%AE%B92-09-2_tv" target="_blank">看見鬼的刑警處容2_09 -2</a> <i>by <a href="http://www.dailymotion.com/qa9070" target="_blank">qa9070</a></i>
-    </div>
-    </div>
+   <header><img src="bootstrap/img/glyphicons-halflings-white.png"></header>
+   <div class="BOX">
+      <iframe frameborder="0" width="240px" src="//www.dailymotion.com/embed/video/x38wj1f" allowfullscreen></iframe><br /><a href="http://www.dailymotion.com/video/x38wj1f_%E5%A5%B9%E5%BE%88%E6%BC%82%E4%BA%AE-ep08-1-tsks_fun" target="_blank">她很漂亮 EP08-1[TSKS]</a> <i>by <a href="http://www.dailymotion.com/koreadrama103" target="_blank">koreadrama103</a></i>
+   </div>
+   <div class="BOX1">
+      <iframe frameborder="0" width="240"  src="//www.dailymotion.com/embed/video/x38wj27" allowfullscreen></iframe><br /><a href="http://www.dailymotion.com/video/x38wj27_%E5%A5%B9%E5%BE%88%E6%BC%82%E4%BA%AE-ep08-2-tsks_fun" target="_blank">她很漂亮 EP08-2[TSKS]</a> <i>by <a href="http://www.dailymotion.com/koreadrama103" target="_blank">koreadrama103</a></i>
+   </div> 
+   <div class="BOX2">第三個區塊</div>
 </body>
 </html>
