--- a/testinfo.html
+++ b/testinfo.html
@@ -2,14 +2,17 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <link rel="stylesheet" href="style/main.css" type="text/css" />    
+    <link rel="stylesheet" href="bootstrap/css/bootstrap-responsive.css" type="text/css" />
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.css" type="text/css" />
+    <link rel="stylesheet" href="bootstrap/css/bootstrap-responsive.min.css" type="text/css" />
     <title>夜二技資一甲測試</title>
-    <div id="float-center"></div>
    <style>div{float:left}</style>
 </head>
 <body>
-<div class="center-blocked">第一個區塊</div>
-<div class="center-block">第二個區塊</div>
-<div class="center-blocke">這裡是文字</div>
+<div class="container">
+    測試
+    </div>
+<div class="container-fluid">
+    </div>    
 </body>
 </html>
