--- a/school_report/index.html
+++ b/school_report/index.html
@@ -22,9 +22,9 @@
 			<ul>
 				<li class="active"><a href="#" accesskey="1" title="">首頁</a></li>
 				<li><a href="webtest.html" accesskey="2" title="">美式建築</a></li>
-				<li><a href="../school_report/European.html" accesskey="3" title="">歐式建築</a></li>
-				<li><a href="../school_report/testinfo.html" accesskey="4" title="">日式建築</a></li>
-				<li><a href="../school_report/About_Us.html" accesskey="5" title="">關於我門</a></li>
+				<li><a href="European.html" accesskey="3" title="">歐式建築</a></li>
+				<li><a href="testinfo.html" accesskey="4" title="">日式建築</a></li>
+				<li><a href="About_Us.html" accesskey="5" title="">關於我門</a></li>
 			</ul>
 		</div>
 	</div>
@@ -33,7 +33,7 @@
 	<div id="staff" class="container">
 		<div class="title">
 			<h2>建築藝術與生活</h2>
-			<span>房屋的本質是一件可抵擋風、雨、熱所引起毀壞的遮蔽物，也是人類生活之容器</span> </div>
+			<span>房屋的本質是一件可抵擋風、雨、熱所引起毀壞的遮蔽物,,，也是人類生活之容器</span> </div>
 		<div class="boxA" onclick="location.href='../school_report/European.html';" style="cursor:pointer;" ><img src="../school_report/img/NotreDame.jpg" width="300" height="450" alt="" /></div>
 		<div class="boxB" onclick="location.href='../school_report/webtest.html';" style="cursor:pointer;"><img src="../school_report/img/caption.jpg" width="300" height="450" alt="" /></div>
 		<div class="boxC" onclick="location.href='../school_report/testinfo.html';" style="cursor:pointer;"><img src="../school_report/img/janpan.jpg" width="300" height="450" alt="" /></div>
@@ -42,11 +42,11 @@
 		<div class="boxA">
 			<h2>歐式建築的特色<br />
 				<span>建築與藝術的結合</span></h2>
-			<p>Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</p>
+			<p>歐式風格強調以華麗的裝飾、濃烈的色彩、精美的造型達到雍容華貴的裝飾效果</p>
 			<ul class="style4">
-				<li class="first"><a href="#">Consectetuer adipiscing elit</a></li>
-				<li><a href="#">Metus aliquam pellentesque</a></li>
-				<li><a href="#">Proin gravida orci porttitor</a></li>
+				<li class="first"><a href="#">哥德式建</a></li>
+				<li><a href="#">巴洛克建築</a></li>
+				<li><a href="#">古羅馬建築</a></li>
 			</ul>
 		</div>
 		<div class="boxB">
@@ -55,13 +55,13 @@
 			<ul class="style3">
 				<li class="first">
 					<p class="date"><a href="#">建<b>築</b></a></p>
-					<h3>Amet sed volutpat mauris</h3>
-					<p><a href="#">Mauris tempus nibh sodales adipiscing dolore.</a></p>
+					<h3>在座標上架構出實體空間</h3>
+					<p><a href="#">用最單純的點、線、面，架構出複雜可用的實體空間</a></p>
 				</li>
 				<li>
 					<p class="date"><a href="#">藝<b>術</b></a></p>
-					<h3>Sagittis diam dolor amet</h3>
-					<p><a href="#">Duis arcu tortor fringilla sed  sed magna.</a></p>
+					<h3>象徵民族文化特質的圖案</h3>
+					<p><a href="#">完美的表現出其所處文化背景</a></p>
 				</li>
 			</ul>
 		</div>
@@ -69,11 +69,11 @@
 			<h2>日式建築特色<br />
 				<span>日本傳統文化的堅持</span></h2>
 			<ul class="style4">
-				<li class="first"><a href="#">Consectetuer adipiscing elit</a></li>
-				<li><a href="#">Metus aliquam pellentesque</a></li>
-				<li><a href="#">Suspendisse iaculis mauris</a></li>
-				<li><a href="#">Urnanet non molestie semper</a></li>
-				<li><a href="#">Suspendisse iaculis mauris</a></li>
+				<li class="first"><a href="#">日本神社建築</a></li>
+				<li><a href="#">日本傳統建築</a></li>
+				<li><a href="#">日本寺廟建築</a></li>
+				<li><a href="#">日本現代建築</a></li>
+			    <li><a href="#">Suspendisse iaculis mauris</a></li>
 			</ul>
 		</div>
 	</div>
@@ -81,14 +81,13 @@
 <div id="welcome-wrapper">
 	<div id="welcome" class="container">
 		<div class="title">
-			<h2>Welcome to our website</h2>
+			<h2>歡迎光臨</h2>
 		</div>
-		<p>This is <strong>OpenSpace</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :) </p>
+		<p>有人說<strong>建築</strong>是基於人類生活的需求、<a href="http://www.ntub.edu.tw" rel="nofollow">NTUB</a>實質的行為以及生命的理念，對周遭的自然與人文環境，所作的人為空間的調整與創作。<a href="http://ide.c9.io">Cloud9</a>相信一個人若能從美的欣賞中，<a href="https://ide.c9.io">Creative Commons Attribution</a> 得到人生無窮的樂趣，那也可昇華一個家、一個時代的人類文明。 </p>
 	</div>
 </div>
 <div id="copyright" class="container">
-<!--&copy=符號C-->
-	<p>&copy; NTUB Night School senior college First-grade A class of Department | <a href="mailto:N1046710@ntub.edu.tw">Email</a> | Design by <a href="http://ntub.yl.com.tw/" rel="nofollow">jimming,gao_gao,tool_man</a>.</p>
+	<p>&copy; NTUB senior college First-grade A class of Department | Photos by <a href="http://fotogrph.com/">Email</a> | Design by <a href="http://templated.co" rel="nofollow">jimming,kao_kao,tool_man</a>.</p>
 </div>
 </body>
 </html>
