--- a/school_report/testinfo.html
+++ b/school_report/testinfo.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/testinfo.css" type="text/css" />
     <meta name="viewport" content="width=device-width; initial-scale=1.0">
 <body>
+ <h1>網頁建構中</h1>
  <div class="div-Periphery">
      <div class="photo-inside">
      </div>
@@ -13,5 +14,6 @@
       日式建築展現古代與現代融合的藝術
      </span>
  </div>
+ 
 </body>
 </html>
