--- a/school_report/European.html
+++ b/school_report/European.html
@@ -8,5 +8,8 @@
 <body>
     <div id="content" class="container" ></div>
     <h1>網頁建構中<h1>
+        <div>
+            
+        </div>
 </body>
 </html>
